--- a/client/src/widgets/06/style.scss
+++ b/client/src/widgets/06/style.scss
@@ -431,12 +431,13 @@
           gap: 4px;
           min-height: 90px;
           max-height: 170px;
-          width: calc(100% + 10px);
+          width: 100%;
           padding-right: 10px;
-          overflow: auto;
-          scrollbar-gutter: stable;
+          overflow-y: scroll;
+          scrollbar-gutter: stable both-edges;
           scrollbar-width: thin;
           scrollbar-color: rgba(0, 0, 0, 0.25) transparent;
+          box-sizing: content-box;
 
           // Scrollbar Styles
           &::-webkit-scrollbar {
